[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Lora-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Smlash.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Lora-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 66
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -384.0
margin_top = 27.0
margin_right = 388.0
margin_bottom = -248.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "THE SMLASH COMPETITION"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOptions" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -358.0
margin_top = -223.0
margin_right = -13.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="MenuOptions"]
margin_right = 345.0
margin_bottom = 40.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "PLAY BRAWL"
align = 2

[node name="Meet" type="Button" parent="MenuOptions"]
margin_top = 44.0
margin_right = 345.0
margin_bottom = 84.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "MEET THE LEAGUE"
align = 2

[node name="Options" type="Button" parent="MenuOptions"]
margin_top = 88.0
margin_right = 345.0
margin_bottom = 128.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"
align = 2

[node name="Election" type="Button" parent="MenuOptions"]
margin_top = 132.0
margin_right = 345.0
margin_bottom = 172.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "DECREES & BLESSINGS"
align = 2

[node name="Leave" type="Button" parent="MenuOptions"]
margin_top = 176.0
margin_right = 345.0
margin_bottom = 216.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "LEAVE"
align = 2

[connection signal="pressed" from="MenuOptions/Join" to="Menu" method="_on_Join_pressed"]
[connection signal="pressed" from="MenuOptions/Meet" to="Menu" method="_on_Meet_pressed"]
[connection signal="pressed" from="MenuOptions/Options" to="Menu" method="_on_Options_pressed"]
[connection signal="pressed" from="MenuOptions/Election" to="Menu" method="_on_Election_pressed"]
[connection signal="pressed" from="MenuOptions/Leave" to="Menu" method="_on_Leave_pressed"]
